sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:9: error: not found: value pluPetitQue
      while (M>0 && !pluPetitQue(M-ecart,v)){
                     ^