sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var lgr=getNombreValeurs 
  var ecart=(lgr.toInt)/2
  while (ecart>0){
    for (i<-1 to lgr){
      var v =getValeur(i)
      var M =i
      while (M>0 && !pluPetitQue(M-ecart,v)){
        copie(M-ecart,M)
        M-=1
      }
      setValeur(M,v)
    }
  }
}
